--- a/main_page.html
+++ b/main_page.html
@@ -10,7 +10,7 @@
 </html>
 <body>
   <body>
-    <p>Selium Anarchy discord server: <a href="https://discord.gg/5E2SB55P43">click here</a>.</p>
+    <p>Selium Anarchy discord server: <a href="https://discord.gg/U3gvHDSt66">click here</a>.</p>
   </body>
   </html>
   <body>
