--- a/main_page.html
+++ b/main_page.html
@@ -1,26 +1,23 @@
 <!Hey there explorer :) Whats up?>
 <!If you are reading this then please contact SpicyHamBoi#8998 on discord.>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Document</title>
+</head>
 <body>
-
-<h2>Welcome to Selium Anarchy webpage</h2>
-
-
+    <div class="main-title">
+        <h2>Welcome to Selium Anarchy webpage</h2>
+    </div>
+    <div class="dc-server">
+        <p>Selium Anarchy discord server: <a href="https://discord.gg/U3gvHDSt66click here</a>.</p>
+    </div>
+    <div class="donations">
+        <p>Selium Anarchy donations here: <a href="https://seliumanarchy.tebex.io/%22%3Eclick here</a>.</p>
+    </div>
+    <div class="box"></div>
 </body>
 </html>
-<body>
-  <body>
-    <p>Selium Anarchy discord server: <a href="https://discord.gg/U3gvHDSt66">click here</a>.</p>
-  </body>
-  </html>
-  <body>
-    <body>
-      <p>Selium Anarchy donations here: <a href="https://seliumanarchy.tebex.io/">click here</a>.</p>
-    </body>
-  <style>
- body {
-   background-image: url('background.jpg');
- }
- </style>
- <title> Selium Anarchy </title>
-<link rel="shortcut icon" type="image/jpg" href="favicon.jpg"/>
